# ai_opjindal

./: .env.example  .gitignore  .~lock.sample_cameras.csv#  README.md  manage.py  pyproject.toml  requirements.txt  sample_cameras.csv  test_occupancy_fix.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_useractivity_userpreferences_alter_user_options_and_more.py
apps/cross_counting/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py
apps/users/: adapter.py  forms.py  views.py
apps/web/: urls.py  views.py
cross_counting/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
cross_counting/migrations/: 0001_initial.py  0002_alter_crosscountingdata_options_and_more.py  0003_alter_camera_rtsp_link.py
docs/: cross_counting_camera.csv  cross_counting_data_timeseries.csv  cross_counting_region.csv  timeseries_optimization.md
opjindal/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: gis.js
templates/account/: base.html  email.html  email_confirm.html  login.html  password_change.html
templates/accounts/: base.html  dashboard.html  landing.html  login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  register.html  settings.html
templates/cross_counting/: base.html  camera_form.html  camera_list.html  config.html  dashboard.html  reports.html  tag.html  tag_form.html  tag_list.html
templates/dashboard/: enhanced_main.html  main.html
templates/partials/: base.html  footer.html  sidebar.html  topbar.html  (+1 more)
(+49 files in other folders)
