[project]
name = "opjindal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "django-allauth>=65.10.0",
    "django-environ>=0.12.0",
    "django-otp>=1.6.1",
    "django-redis>=6.0.0",
    "django-timescaledb>=0.2.13",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "fido2>=2.0.0",
    "openpyxl>=3.1.5",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
]
